# bevy-kajiya

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  demos.md  test.txt  test1.txt
bevy_kajiya_core/: Cargo.toml
bevy_kajiya_core/src/: lib.rs
bevy_kajiya_editor/: Cargo.toml
bevy_kajiya_editor/src/: lib.rs  plugin.rs  raycast.rs  target.rs
bevy_kajiya_egui/: Cargo.toml
bevy_kajiya_egui/src/: lib.rs  plugin.rs
bevy_kajiya_logger/: Cargo.toml
bevy_kajiya_logger/src/: lib.rs
bevy_kajiya_render/: Cargo.toml
bevy_kajiya_render/src/: asset.rs  camera.rs  frame.rs  lib.rs  mesh.rs  plugin.rs  render_instances.rs  render_resources.rs  world_renderer.rs  world_renderer_temp.rs
examples/: view.rs
src/: camera.rs  frame.rs  lib.rs  mesh.rs  plugin.rs  renderer.rs  scene.rs  world_renderer.rs
src/bevy_kajiya_egui/: mod.rs  plugin.rs
src/kajiya_simple/: main_loop.rs
