[package]
name = "bevy-kajiya"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "bevy_kajiya_render",
    "bevy_kajiya_core",
#    "bevy_kajiya_egui",
]

[dependencies]
bevy_kajiya_core = { path = "bevy_kajiya_core" }
bevy_kajiya_render = { path = "bevy_kajiya_render" }
#bevy_kajiya_egui = { path = "bevy_kajiya_egui" }

[features]
kajiya_egui = ["bevy_kajiya_core/kajiya_egui"]

[dev-dependencies]
bevy = { version = "0.8.0", default-features = false, features = ["bevy_winit"] }
dolly = "0.1"

[patch.crates-io]
# Official ray-tracing extensions
rspirv = { git = "https://github.com/gfx-rs/rspirv.git", rev = "dae552c" }
spirv_headers = { git = "https://github.com/gfx-rs/rspirv.git", rev = "dae552c" }