[package]
name = "bevy_kajiya_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { path = "../../bevy", default-features = false, features = ["bevy_winit"] }
kajiya = { path = "../../kajiya/crates/lib/kajiya" }
egui-gizmo = { path = "../../egui-gizmo" }
bevy_kajiya_egui = { path = "../bevy_kajiya_egui" }
bevy_kajiya_render = { path = "../bevy_kajiya_render" }
bevy_kajiya_logger = { path = "../bevy_kajiya_logger" }