[package]
name = "bevy_kajiya_egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.0", default-features = false, features = ["bevy_winit"] }
kajiya = { path = "../../kajiya/crates/lib/kajiya" }
bevy_kajiya_render = { path = "../bevy_kajiya_render" }
kajiya-egui-backend = { path = "../../kajiya/crates/lib/kajiya-egui", package = "kajiya-egui" }
egui = "0.16.1"